Fixed alignment issue in FF

--- a/content-frontend/wp-content/themes/accident-review/style.css
+++ b/content-frontend/wp-content/themes/accident-review/style.css
@@ -358,70 +358,57 @@ form button:hover,
 .file-upload.field .file-types ul {
 	padding-left: 10px;
 }
+
 .file-upload.field .file-preview {
+	text-align: center;
 	margin-top: 10px;
 }
-.file-upload.field .file-preview > .file {
+.file-upload.field .file-preview .file {
 	display: inline-block;
-	width: 100px;
-	margin: 5px;
-	text-align: center;
 	background-color: #e1dcce;
-	padding-top: 10px;
-	cursor: pointer;
 	border: 3px solid transparent;
-	
-	position: relative;
-	padding-bottom: 1em;
+	cursor: pointer;
+	width: 100px;
+	vertical-align: top;
 }
-.file-upload.field .file-preview > .file:hover {
+.file-upload.field .file-preview .file:hover {
 	border-color: #83A2C9;
 }
-.file-upload.field .file-preview > .file .icon {
+.file-upload.field .file-preview .file .icon {
+	display: block;
 	width: 64px;
 	height: 64px;
-	background-image: url(images/icons/icon-file.png);
-	background-repeat: no-repeat;
-	background-position: center center;
-	display: inline-block;
-	text-align: center;
-	margin-bottom: 10px;
+	margin: 10px auto !important;
+	background: url(images/icons/icon-file.png) no-repeat center center;
 }
-.file-upload.field .file-preview > .file .description {
-	text-transform: uppercase;
-	font-size: 9px;
-	display: block;
-	background-color: #f3f0ea;
-	height: 2em;
-	overflow: hidden;
-	line-height: 2em;
-	padding: 0 5px;
-	
-	position: absolute;
-	bottom: 0;
-	left: 0;
-	right: 0;
-}
-.file-upload.field .file-preview > .file .description:hover {
-	color: #83A2C9;
-}
-.file-upload.field .file-preview > .word.file .icon {
-	background-image: url(images/icons/icon-word.png);
-}
-.file-upload.field .file-preview > .pdf.file .icon {
+.file-upload.field .file-preview .pdf.file .icon {
 	background-image: url(images/icons/icon-pdf.png);
 }
-.file-upload.field .file-preview > .img.file .icon {
-	background-image: none;
-	position: relative;
+.file-upload.field .file-preview .word.file .icon {
+	background-image: url(images/icons/icon-word.png);
 }
-.file-upload.field .file-preview > .img.file .icon img {
+.file-upload.field .file-preview .img.file .icon {
+	background-image: none;
+}
+.file-upload.field .file-preview .img.file .icon img {
 	max-width: 64px;
 	max-height: 64px;
-	position: absolute;
-	left: 50%;
-	top: 50%;
 }
+.file-upload.field .file-preview .file .description {
+	text-align: center;
+	font-size: 9px;
+	text-transform: uppercase;
+	background-color: #f3f0ea;
+	padding: 0 5px;
+	display: block;
+	height: 20px;
+	line-height: 20px;
+	overflow: hidden;
+}
+.file-upload.field .file-preview .file .description:hover {
+	color: #83A2C9;
+}
+
 #image-preview {
 	text-align: center;
 	background-color: #e1dcce;
